# ttial

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  advacuum.cpp  ttial.cpp
example/: brick_and_mortar.ipynb  brick_and_mortar.py  input.txt
examples/nonsteadystate/: brick_and_mortar.ipynb  input.txt
examples/steadystate/: brick_and_mortar.ipynb  input.txt
src/: auxiliary.h  geometry.h  io.h  nodes.h  nonsteadystate.h  steadystate.h  visual.h
